src/main/resources/static/css/dash.css
 body, html {
    height: 100%;
    width: 100%;
    background-color: #333232;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    font-family: Varela Round;
    overflow: hidden;
}

html {
	font-size: 13px;
}

#invites {
	z-index: 2;
	position: absolute;
	background-color: #fff;
	width: 222px;
	top: 50px;
	left: 163px;
}

a {
	color: #E3E4DB;
}

.g:hover {
	color: green;
}

.r:hover {
	color: red;
}

.text {
	display: inline-block;
	vertical-align: middle;
}

#searchUsers {
	width: 230px;	
}

.profPic {
	width: 40px;
	height: 40px;
}

#logoutForm {
	display: none;
}

#results {
	z-index: 2;
	right: 40px;
	position: absolute;
	background-color: #fff;
	width: 230px;
	top: 25px;
}

.user_info {
	display: inline-block;
	vertical-align: middle;
}

.search_result {
	border: 1px solid #CCCCCC;
	border-top: none;
}
.search_result:hover {
	background-color: #EEEEEE;
}

.user_pic {
	height: 40px;
	width: 40px;
	border-radius: 50%;
	margin: 5px;
	display: inline-block;
}

.user_name {
	margin: 0px;
	font-weight: bold;
	color: #000;
}
.user_email {
	margin: 0px;
	font-weight: 100;
	color: #CBB8A9;
}

#twapIt {
	text-align: center;
	padding-right: 1vw;
}

/* for WHATS GOIN ON text */
span {
	color: #F1F5F4;
	font-weight: bolder;
	font-size: 17px;
}

#twapButton {
	margin-top: 3px;
	border: none;
	color: #CBB8A9;
	font-size: 16px;
	background-color: transparent;
}

#twapButton:hover {
	color: #88958D;
}

#note {
	color: #CCCCCC;
	font-style: italic;
	margin-bottom: 4px;
}

#map {
	border: 1px solid #F1F3F4;
	border-radius: 3px;
}

#twapFeed {
	border: 1px solid #CCCCCC;
	border-radius: 3px;
	height: 80vh;
	width: 100%;
	margin-top: 4vh;
	background-color: #F1F5F4;
	overflow: scroll;
}

hr {
	margin: 5px auto;
	width: 90%;
}

.twapStuff {
	display: inline-block;
	vertical-align: middle;
}

.time {
	display: inline-block;
	margin: 0px;
}

.twapText {
	margin: 0px;
	word-break: break-all;
}

p.twapText {
    word-wrap: break-word;
    word-break: break-all;
}

.twapDel:hover {
	color: red;
}

